# jungle

./: CMakeLists.txt  TODO.md  pointers.txt
autotest/: CMakeLists.txt  databasetest.cpp  guessitjobtest.cpp  jungleapptest.cpp  jungleconfigtest.cpp  junglefirstruntest.cpp  jungleinitiatortest.cpp  junglenormalruntest.cpp  shared.h  tvdbjobtest.cpp
cmake/: FindEjdb.cmake  FindGuessIt.cmake
ejdb/: CMakeLists.txt  database.cpp  database.h  jsoncollection.cpp  jsoncollection.h  jsondatabase.cpp  jsondatabase.h  jsonquery.cpp  jsonquery.h  kvariantcollection.cpp  kvariantcollection.h  kvariantquery.cpp  kvariantquery.h  kvariantstore.cpp  kvariantstore.h  tools.h
ejdb/autotest/: CMakeLists.txt  databasetest.cpp
old/src/: CMakeLists.txt  feeder.cpp  movie.cpp  moviefetchjob.h  moviesmodel.h  qmldir  tvepisodemodel.cpp  tvepisodemodel.h  tvseason.cpp  tvseason.h  tvshowfetchjob.h  tvshowsmodel.h  videosmodel.cpp  videosmodel.h
old/src/autotest/: initiatortest.cpp  initiatortest.h  webmockdata.sql
qml/: CMakeLists.txt  EpisodeDelegate.qml  FirstRun.qml  MainView.qml  MovieDelegate.qml  Movies.qml  ProgressBar.qml  ShowDelegate.qml  Shows.qml  Sidebar.qml  ToolBox.qml  TvEpisodes.qml  TvShows.qml  VideoPlayer.qml  Videos.qml  main.qml
src/: CMakeLists.txt  abstractapp.cpp  abstractapp.h  abstractinitiator.h  asyncjobconsumer.cpp  asyncjobconsumer.h  baloovideosfetcher.cpp  baloovideosfetcher.h  consumerinterface.h  cursor.cpp  cursor.h  database.cpp  database.h  databaseconsumer.cpp  databaseconsumer.h  feeder.cpp  feeder.h  filesystemtracker.cpp  filesystemtracker.h  forwardingconsumer.cpp  forwardingconsumer.h  guess.py  guessitconsumer.cpp  guessitconsumer.h  guessitjob.cpp  guessitjob.h  initiator.cpp  initiator.h  job.cpp  job.h  jungle.desktop  jungleapp.cpp  jungleapp.h  jungleconfig.cpp  jungleconfig.h  junglefirstrun.cpp  junglefirstrun.h  jungleinitiator.cpp  jungleinitiator.h  junglenormalrun.cpp  (+55 more)
src/autotest/: CMakeLists.txt  asyncjobconsumertest.cpp  databasetest.cpp  databasetest.h  filemapmockdata.sql  guessitjobtest.cpp  jungleapptest.cpp  moviefetchjobtest.cpp  networkimagefetchjobtest.cpp  queuetest.cpp  thumbnailcreationjobtest.cpp  tvepisodemodeltest.cpp  tvseasonfetchjobtest.cpp  tvshowfetchjobtest.cpp
src/interfaces/: IConfig.h  IInitGui.cpp  IInitGui.h  IInitiator.h  IUpdateFeeder.h  databaseinterface.h  dataqueueinterface.h  irun.h
